--- a/app/build.gradle
+++ b/app/build.gradle
@@ -80,14 +80,11 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-
-//    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
-//        exclude group: 'com.android.support', module: 'support-annotations'
-//    })
+    compile fileTree(include: ['*.jar'], dir: 'libs')
+    //    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
+    //        exclude group: 'com.android.support', module: 'support-annotations'
+    //    })
     compile 'com.android.support:appcompat-v7:26.+'
-
-    compile project(path: ':CommonAppLib')
-
-//    testCompile 'junit:junit:4.12'
+    implementation project(path: ':CommonAppLib')
+    //    testCompile 'junit:junit:4.12'
 }
