--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,13 +20,13 @@ def versionFullName = "${versionMajor}.${versionMinor}.${versionPatch}${versionR
 def buildName = "build${buildTime()}"
 
 android {
-    compileSdkVersion 26
+    compileSdkVersion 28
     buildToolsVersion "27.0.3"
 
     defaultConfig {
         applicationId "au.com.tyo.sample"
         minSdkVersion 16
-        targetSdkVersion 25
+        targetSdkVersion 28
         versionCode "${buildNumber}".toInteger()
         versionName "${versionFullName}"
 
@@ -40,14 +40,10 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
 
-            /**
-             * for gradle 2.3.*
-             */
-
             applicationVariants.all { variant ->
                 variant.outputs.all { output ->
                     project.ext { appName = 'app' }
-                    def newName = appName + "-release-" + versionFullName + ".apk"
+                    def newName = appName + "-" + buildType + "-v" + versionFullName + "-b" + buildNumber + forUse + ".apk"
                     outputFileName = newName
                 }
             }
@@ -55,7 +51,7 @@ android {
             /**
              * The dev build config
              */
-            buildConfigField "String", "BUILD_ID", "\"" + versionFullName + "-" + buildName + "\""
+            buildConfigField "String", "BUILD_ID", "\"" + versionFullName + "-b" + buildNumber + "\""
             // buildConfigField "boolean", "DEBUG", "false"
         }
 
@@ -63,7 +59,7 @@ android {
             /**
              * The  prod build config
              */
-            buildConfigField "String", "BUILD_ID", "\"" + versionFullName + "-" + buildName + "\""
+            buildConfigField "String", "BUILD_ID", "\"" + versionFullName + "-b" + buildNumber + " (Debug)\""
             //buildConfigField "boolean", "DEBUG", "true"
         }
     }
@@ -76,15 +72,26 @@ android {
         // but continue the build even when errors are found:
         abortOnError false
     }
-    useLibrary 'org.apache.http.legacy'
+
+    // we don't need that any more
+    //useLibrary 'org.apache.http.legacy'
+
+    configurations.all {
+        resolutionStrategy {
+            force 'com.android.support:multidex:1.0.3'
+            force 'com.android.support:support-v4:28.0.0-alpha1'
+            force 'com.android.support:cardview-v7:28.0.0-alpha1'
+            force 'com.android.support:appcompat-v7:28.0.0-alpha1'
+        }
+    }
 }
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     //    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
     //        exclude group: 'com.android.support', module: 'support-annotations'
     //    })
-    compile 'com.android.support:appcompat-v7:26.+'
-    implementation project(path: ':CommonAppLib')
+    implementation 'com.android.support:appcompat-v7:28.0.0-alpha1'
+    api project(path: ':CommonAppLib')
     //    testCompile 'junit:junit:4.12'
 }
