updated README.md and others

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -43,7 +43,7 @@
         </activity>
 
         <activity
-            android:name=".ActivityApp"
+            android:name="au.com.tyo.sample.ActivityApp"
             android:configChanges="orientation"
             android:label="@string/app_name"
             android:launchMode="singleTop"
@@ -52,15 +52,15 @@
             ></activity>
 
         <activity
-            android:name=".ui.activity.ActivityLogin"
+            android:name="au.com.tyo.sample.ui.activity.ActivityLogin"
             android:label="@string/login"
-            android:parentActivityName=".ActivityApp"
+            android:parentActivityName="au.com.tyo.sample.ActivityApp"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustPan"
             >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value=".ActivityApp" />
+                android:value="au.com.tyo.sample.ActivityApp" />
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
                 <category android:name="android.intent.category.DEFAULT" />
