updates for new android version

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,6 +1,9 @@
 // App Libraries
 include ':CommonUtils', ':CommonAndroid', ':CommonUiLib', ':CommonAppLib'
 
+// App Json Libraries
+include ':CommonJsonForm', ':CommonJsonFormDroid'
+
 // Service Library
 include ':CommonServices'
 
