--- a/app/build.gradle
+++ b/app/build.gradle
@@ -81,9 +81,9 @@ android {
     configurations.all {
         resolutionStrategy {
             force 'com.android.support:multidex:1.0.3'
-            force 'com.android.support:support-v4:28.0.0-alpha1'
-            force 'com.android.support:cardview-v7:28.0.0-alpha1'
-            force 'com.android.support:appcompat-v7:28.0.0-alpha1'
+            force 'com.android.support:support-v4:28.0.0'
+            force 'com.android.support:cardview-v7:28.0.0'
+            force 'com.android.support:appcompat-v7:28.0.0'
         }
     }
 }
@@ -93,7 +93,7 @@ dependencies {
     //    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
     //        exclude group: 'com.android.support', module: 'support-annotations'
     //    })
-    implementation 'com.android.support:appcompat-v7:28.0.0-alpha1'
+    implementation 'com.android.support:appcompat-v7:28.0.0'
     api project(path: ':CommonAppLib')
     //    testCompile 'junit:junit:4.12'
 }
