--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,6 +20,8 @@ def buildTime() {
 def versionFullName = "${versionMajor}.${versionMinor}.${versionPatch}.${versionRelease}"
 def buildName = "build${buildTime()}"
 
+def ANDROIDX_LIBERY_VERSION = "1.1.0"
+
 android {
     compileSdkVersion 29
 
@@ -80,10 +82,7 @@ android {
 
     configurations.all {
         resolutionStrategy {
-            force 'com.android.support:multidex:1.0.3'
-            force 'com.android.support:support-v4:28.0.0-alpha1'
-            force 'com.android.support:cardview-v7:28.0.0-alpha1'
-            force 'com.android.support:appcompat-v7:28.0.0-alpha1'
+
         }
     }
 }
@@ -93,7 +92,10 @@ dependencies {
     //    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
     //        exclude group: 'com.android.support', module: 'support-annotations'
     //    })
-    implementation 'com.android.support:appcompat-v7:28.0.0-alpha1'
     api project(path: ':CommonAppLib')
     //    testCompile 'junit:junit:4.12'
+
+    implementation "androidx.appcompat:appcompat:$ANDROIDX_LIBERY_VERSION"
+    // For loading and tinting drawables on older versions of the platform
+    implementation "androidx.appcompat:appcompat-resources:$ANDROIDX_LIBERY_VERSION"
 }
